# simple-excel-viewer

./: .gitignore  Makefile  README.md  pyproject.toml
simple_excel_viewer/: __init__.py  app.py  dataframe_loader.py  dataframe_presenter.py  dataframe_service.py  main.py  viewer.py
tests/unit/: test_app.py  test_dataframe_loader.py  test_dataframe_presenter.py  test_dataframe_service.py
