[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflake
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.poetry]
name = "simple-excel-viewer"
version = "0.1.0"
description = ""
authors = ["Sviatoslav Bobryshev <wstswsb@gmail.com>"]
readme = "README.md"
packages = [{include = "simple_excel_viewer"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
ruff = "^0.0.261"
black = "^23.3.0"
mypy = "^1.2.0"
pandas-stubs = "^2.0.0.230412"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
